--- a/Qt/Core/Testing/Cxx/CMakeLists.txt
+++ b/Qt/Core/Testing/Cxx/CMakeLists.txt
@@ -1,14 +1,12 @@
-include(ParaViewQt)
-pv_find_package_qt(qt_targets REQUIRED QUIET
-                QT5_COMPONENTS Core Widgets)
-pv_qt_wrap_cpp(MOC_SRCS BasicApp.h)
-vtk_module_test_executable(pqCoreBasicApp BasicApp.cxx BasicApp.h ${MOC_SRCS})
-target_link_libraries(pqCoreBasicApp LINK_PRIVATE ${qt_targets})
-ExternalData_add_test(ParaViewData
+find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
+set(CMAKE_AUTOMOC 1)
+vtk_module_test_executable(pqCoreBasicApp BasicApp.cxx BasicApp.h)
+target_link_libraries(pqCoreBasicApp PRIVATE Qt5::Core Qt5::Widgets)
+ExternalData_add_test("${_vtk_build_TEST_DATA_TARGET}"
   NAME pqCoreBasicApp
   COMMAND pqCoreBasicApp
-          -dr "--test-directory=${PARAVIEW_TEST_DIR}"
-          "--test-baseline=DATA{${PARAVIEW_TEST_BASELINE_DIR}/pqCoreBasicApp.png}"
+          -dr "--test-directory=${_vtk_build_TEST_OUTPUT_DIRECTORY}"
+          "--test-baseline=DATA{${_vtk_build_TEST_INPUT_DATA_DIRECTORY}/Data/Baseline/pqCoreBasicApp.png}"
           --exit
   )
 set_tests_properties(pqCoreBasicApp PROPERTIES LABELS "PARAVIEW")
