pqComponents: update to the new module system

--- a/Qt/Components/Testing/Cxx/CMakeLists.txt
+++ b/Qt/Components/Testing/Cxx/CMakeLists.txt
@@ -1,9 +1,7 @@
-include(ParaViewQt)
-pv_find_package_qt(qt_targets REQUIRED QUIET
-                QT5_COMPONENTS Core Widgets)
-pv_qt_wrap_cpp(MOC_SRCS FilteredPipelineBrowserApp.h)
-vtk_module_test_executable(pqPipelineApp FilteredPipelineBrowserApp.cxx FilteredPipelineBrowserApp.h ${MOC_SRCS})
-target_link_libraries(pqPipelineApp LINK_PRIVATE ${qt_targets})
+find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
+set(CMAKE_AUTOMOC 1)
+vtk_module_test_executable(pqPipelineApp FilteredPipelineBrowserApp.cxx FilteredPipelineBrowserApp.h)
+target_link_libraries(pqPipelineApp PRIVATE Qt5::Core Qt5::Widgets)
 
 #ADD_TEST(pqPipelineApp "${EXECUTABLE_OUTPUT_PATH}/pqPipelineApp" -dr "--test-directory=${PARAVIEW_TEST_DIR}")
 #set_tests_properties(pqPipelineApp PROPERTIES LABELS "PARAVIEW")
