AnalyzeNIfTIReaderWriter: update to the new module system

--- a/Plugins/AnalyzeNIfTIReaderWriter/CMakeLists.txt
+++ b/Plugins/AnalyzeNIfTIReaderWriter/CMakeLists.txt
@@ -1,46 +1,32 @@
+vtk_module_scan(
+  MODULE_FILES      "${CMAKE_CURRENT_SOURCE_DIR}/NIfTIIO/vtk.module"
+  REQUEST_MODULES   AnalyzeNIfTIIO::NIfTIIO
+  PROVIDES_MODULES  nifti_modules
+  REQUIRES_MODULES  required_modules
+  HIDE_MODULES_FROM_CACHE ON)
 
-# create a plugin that adds readers and writers
-# for Analyze and NIfTI files to the ParaView GUI
-# it is added in the file dialog when doing opens/saves.
+if (required_modules)
+  foreach (required_module IN LISTS required_modules)
+    if (NOT TARGET "${required_module}")
+      message(FATAL_ERROR
+        "Failed to find the required module ${required_module}.")
+    endif ()
+  endforeach ()
+endif ()
 
-#--------------------------------------------------
-# Find and Use ParaView
-#--------------------------------------------------
-IF (ParaView_SOURCE_DIR)
-  INCLUDE_DIRECTORIES(
-    ${VTK_INCLUDE_DIRS}
-  )
-  INCLUDE_DIRECTORIES(SYSTEM
-    ${MPI_INCLUDE_PATH}
-  )
+vtk_module_build(
+  MODULES             ${nifti_modules}
+  PACKAGE             AnalyzeNIfTIIO
+  INSTALL_HEADERS     OFF
+  LIBRARY_NAME_SUFFIX "pv${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}"
+  VERSION             "${PARAVIEW_VERSION}"
+  SOVERSION           "1")
 
-vtk_module_load(vtkzlib)
+paraview_add_plugin(AnalyzeNIfTIIO
+  REQUIRED_ON_SERVER
+  VERSION "1.0"
+  MODULES AnalyzeNIfTIIO::NIfTIIO)
 
-INCLUDE_DIRECTORIES(${vtkzlib_INCLUDE_DIRS})
-
-ELSE ()
-  FIND_PACKAGE(ParaView REQUIRED)
-  INCLUDE(${PARAVIEW_USE_FILE})
-ENDIF ()
-
-ADD_PARAVIEW_PLUGIN(AnalyzeNIfTIIO "1.0"
-  DESCRIPTION "Reader/Writer for Analyze and NifTI files"
-  SERVER_MANAGER_SOURCES vtkAnalyzeReader.cxx
-                         vtkAnalyzeWriter.cxx
-                         vtkNIfTIReader.cxx
-                         vtkNIfTIWriter.cxx
-                         vtknifti1_io.cxx
-                         vtkznzlib.cxx
-  SERVER_MANAGER_XML     AnalyzeNIfTISM.xml
-  REQUIRED_ON_SERVER)
-
-target_link_libraries(AnalyzeNIfTIIO LINK_PRIVATE ${vtkzlib_LIBRARIES})
-
-# Add testing if necessary
 if (BUILD_TESTING)
-  # Analyze reader test was conflicting with the reader from VisIt. So
-  # disabling it.
-  if(NOT PARAVIEW_USE_VISITBRIDGE)
-    add_subdirectory(Testing)
-  endif ()
-endif()
+  add_subdirectory(Testing)
+endif ()
