--- a/Plugins/AnalyzeNIfTIReaderWriter/Testing/CMakeLists.txt
+++ b/Plugins/AnalyzeNIfTIReaderWriter/Testing/CMakeLists.txt
@@ -1,15 +1,10 @@
-INCLUDE(ParaViewTestingMacros)
+set(module_tests
+  AnalyzeReaderWriterPlugin.xml)
 
-set(MODULE_TESTS
-  ${CMAKE_CURRENT_SOURCE_DIR}/AnalyzeReaderWriterPlugin.xml
-)
-
-IF (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
-
-  add_client_tests("pv"
-    LOAD_PLUGIN "AnalyzeNIfTIIO"
-    BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-    TEST_SCRIPTS ${MODULE_TESTS}
-  )
-
-ENDIF ()
+if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
+  paraview_add_client_tests(
+    LOAD_PLUGIN   "AnalyzeNIfTIIO"
+    BASELINE_DIR  ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS  ${module_tests})
+endif ()
