--- a/Plugins/CDIReader/CMakeLists.txt
+++ b/Plugins/CDIReader/CMakeLists.txt
@@ -1,37 +1,28 @@
-cmake_minimum_required(VERSION 3.3)
+vtk_module_scan(
+  MODULE_FILES      "${CMAKE_CURRENT_SOURCE_DIR}/Reader/vtk.module"
+  REQUEST_MODULES   CDIReader::vtkCDIReader
+  PROVIDES_MODULES  cdi_modules
+  REQUIRES_MODULES  required_modules
+  HIDE_MODULES_FROM_CACHE ON)
 
-if (NOT ParaView_BINARY_DIR)
-  find_package(ParaView REQUIRED)
-  include(${PARAVIEW_USE_FILE})
-endif()
+if (required_modules)
+  foreach (required_module IN LISTS required_modules)
+    if (NOT TARGET "${required_module}")
+      message(FATAL_ERROR
+        "Failed to find the required module ${required_module}.")
+    endif ()
+  endforeach ()
+endif ()
 
-if(PARAVIEW_USE_MPI)
-  include(vtkMPI)
-endif()
+vtk_module_build(
+  MODULES             ${cdi_modules}
+  PACKAGE             CDIReader
+  INSTALL_HEADERS     OFF
+  LIBRARY_NAME_SUFFIX "pv${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}"
+  VERSION             "${PARAVIEW_VERSION}"
+  SOVERSION           "1")
 
-include_directories(
-  ${PARAVIEW_INCLUDE_DIRS}
-  ${PARAVIEW_GUI_INCLUDE_DIRS}
-  ${PARAVIEW_KWSYS_INCLUDE_DIRS}
-  ${VTK_INCLUDE_DIRS}
-)
-
-# Please leave these definitions in here and do not change them.
-# We use the cdi library to read both, netCDF2 and netCDF4 data.
-add_definitions(-DHAVE_LIBNETCDF -DHAVE_NETCDF2 -DHAVE_NETCDF4)
-
-vtk_module_warnings_disable(C)
-vtk_module_load(vtknetcdf)
-
-add_paraview_plugin(CDIReader "1.3"
-  SERVER_MANAGER_XML
-    CDIReader.xml
-  SERVER_MANAGER_SOURCES
-    vtkCDIReader.cxx
-  SOURCES
-    cdilib.c
+paraview_add_plugin(CDIReader
   REQUIRED_ON_SERVER
-)
-
-set_property(TARGET CDIReader PROPERTY C_STANDARD 99)
-target_link_libraries(CDIReader LINK_PRIVATE ${vtknetcdf_LIBRARIES})
+  VERSION "1.3"
+  MODULES CDIReader::vtkCDIReader)
