EmbossingRepresentations: update to the new module system

--- a/Plugins/EmbossingRepresentations/Testing/CMakeLists.txt
+++ b/Plugins/EmbossingRepresentations/Testing/CMakeLists.txt
@@ -1,16 +1,19 @@
-include(ParaViewTestingMacros)
+include(ParaViewTesting)
 
 if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
-  add_client_tests("pv"
+  paraview_add_client_tests(
     LOAD_PLUGIN "EmbossingRepresentations"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/ExtrusionRepresentationPointData.xml)
-  add_client_tests("pv"
+  paraview_add_client_tests(
     LOAD_PLUGIN "EmbossingRepresentations"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/ExtrusionRepresentationCellData.xml)
-  add_client_tests("pv"
+  paraview_add_client_tests(
     LOAD_PLUGIN "EmbossingRepresentations"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/BumpMapRepresentationPointData.xml)
 endif()
